# eau2

./: CMakeLists.txt  Makefile  README.md
datasets/: 100k.txt  3.sor  commits.ltgt  projects.ltgt  users.ltgt
report/: doc.md  doc.md.backup  report.md
src/: CMakeLists.txt  KVStore.h  application.h  array.h  boolArray.h  boolColumn.h  boolMetaArray.h  charArray.h  colArray.h  column.h  dataframe.h  distributedDataFrame.h  fielder.h  floatArray.h  floatColumn.h  floatMetaArray.h  generateMakeFile.py  generate_datafile.py  intArray.h  intColumn.h  intMetaArray.h  message.h  metaArray.h  modified_dataframe.h  network.h  object.h  row.h  rower.h  schema.h  serializableObject.h  strBuff.h  string.h  stringArray.h  stringColumn.h  stringMetaArray.h
src/array/: array.h  boolArray.h  charArray.h  colArray.h  floatArray.h  floatMetaArray.h  intArray.h  metaArray.h  stringArray.h  stringMetaArray.h
src/columns/: boolColumn.h  column.h  floatColumn.h  intColumn.h  stringColumn.h
src/primatives/: errors.h  helper.h  integer.h  network.h  object.h  row.h  schema.h  strBuff.h
src/sorer/: sor.h  type.h  util.h
tests/: AppHelpers.h  WordCount.cpp  application_test.cpp  bench.cpp  client.cpp  distributedDataFrameTests.cpp  file.txt  linus.cpp  m3  m3.cpp  m4.cpp  personal_test_suite.cpp  server.cpp  testSerialization.cpp  testSor.cpp  testing.cpp  testingDistributedDataFrame.cpp
